# installforge-docs

./: .gitignore  README.md  glossary.md  mkdocs.yml  poe_tasks.toml  pyproject.toml
.github/workflows/: build_and_deploy.yml
data/: EnvironmentVariables.csv  PathConstants.csv  SetupConstants.csv
docs/: index.md
docs/contributing/: asking-a-question.md  index.md  making-a-donation.md  providing-a-new-language-file.md  reporting-a-bug.md  requesting-a-new-feature.md
docs/faq/: index.md
docs/getting-started/: features.md  index.md  installation.md  introduction.md  quick-start-guide.md  system-prerequisites.md
docs/how-tos/: building-setups-with-cli-builder.md  code-signing-setup-packages.md  creating-your-own-language-file.md  index.md  installing-new-language-files.md  using-custom-commands.md  using-custom-display-icon-in-windows-apps-and-features.md  using-custom-display-icon-in-windows-programs-and-features.md  using-custom-variables.md  using-environment-variables.md  using-predefined-constants.md
docs/license/: index.md
docs/release-notes/: index.md
docs/stylesheets/: extra.css
