[tool.poetry]
requires-poetry = ">=2.0, <= 3.0"
# Use Poetry only for dependency management, not for developing a Python package.
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10, <4"
poethepoet = "^0.37.0"
mkdocs-material = "^9.7.0"
mkdocs-table-reader-plugin = "^3.1.0"
mkdocs-git-revision-date-localized-plugin = "^1.4.7"
mkdocs-git-committers-plugin-2 = "^2.5.0"
